feat:// enhanced delete, changed docs, optimisations
